css/style.css
/* ... */
.button:hover {
  background-color: var(--bgColorMenu);
  color: var(--clr-icon-1);
  transform: translateY(-5px);
  transition: 0.3s;
}

.button__icon {
  position: relative;
  top: 0.2rem;
  font-size: 1.25rem;
  margin-left: var(--mb-0-5);
}

#contact__button {
  background-color: var(--clr-body-1);
}

#contact__button:hover {
  background-color: var(--bgColorMenu);
  cursor: pointer;
  user-select: none;
}

#contact > div.contact__container.container.grid > div > div.home__social_2 > * {
  background-color: var(--clr-body-1);
}

#contact > div.contact__container.container.grid > div > div.home__social_2 > *:hover {
  background-color: var(--clr-txt-1);
}

body > nav > div.speech > div.social-links > div > * {
  color: var(--clr-txt-2);
}

button.__dark {
  position: fixed;
  top: 5.5%;
  left: 3.5%;
  z-index: 100;
  width: 2.5rem;
  height: 2.5rem;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.2rem;
  background: transparent;
  border: 3px solid var(--clr-txt-1);
}

button.__dark > .fi {
  transform: translateY(.15rem);
}

button.__dark:hover {
  cursor: pointer;
}

/* About */

#about > div > div > div > div.about__info > * > span.about__info-name {
  font-weight: var(--font-weight-regular);
}

#about > span {
  margin-bottom: 1rem;
}

.about__description {
  text-align: center;
  margin-bottom: var(--mb-1);
}

#contact {
  margin-top: 1.5rem;
}

.about__info {
  /*display: flex;*/
  /*justify-content: space-evenly;*/
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  margin-bottom: var(--mb-1);
}

.about__info-title {
  font-size: var(--h2-font-size);
  font-weight: var(--font-weight-light);
}

.about__info-name {
  font-size: var(--h3-font-size);
  font-weight: var(--font-weight-light);
}
/*
#about > div > div > div.about__info > div:nth-child(3) > span.about__info-name > a {
  padding: .2rem;
  margin-left: .3rem;
  font-size: 1rem;
  font-weight: 400;
}

#about > div > div > div.about__info > div:nth-child(3) > span.about__info-name > a:hover {
  background-color: var(--bgColorMenu);
  color: var(--clr-body-2);
}
*/

#about > div > div > div > div.about__buttons {
  display: flex;
  flex-direction: row;
  text-align: center;
  justify-content: center;
}

#about > div > div > div > div.about__buttons > * {
  margin: 1rem 1rem 0;
}

#about > div > div > div > div.about__buttons > a:nth-child(2):hover {
  color: var(--clr-icon-1);
}

#about > div > div > div > div.about__buttons > a:nth-child(2) > span {
  position: relative;
  top: 0.2rem;
}

#about > div > div > div > div.about__buttons > a:nth-child(2) > i {
  position: relative;
  top: .25rem;
}

.about__info-title,
.about__info-name {
  display: block;
  text-align: center;
}

.about__buttons {
  display: flex;
  justify-content: center;
}

.button--flex:nth-child(1),
#about > div > div > div > div.about__buttons > a:nth-child(2) {
  background-color: var(--clr-body-1);
  color: var(--clr-txt-1);
}

.button--flex:nth-child(1):hover,
#about > div > div > div > div.about__buttons > a:nth-child(2):hover {
  background-color: var(--bgColorMenu);
  color: var(--clr-icon-1);
}

.my__skills {
  font-size: var(--h2-font-size);
}

.my__story {
  font-size: var(--h2-font-size);
}
/* ... */

